Fleshing out 15 years of Hackaday section

--- a/index.html
+++ b/index.html
@@ -199,20 +199,39 @@
 				</section>
 			</section>
 			<section>
-				<h1>Hackaday is 15 Years Old</h1>
-				<aside class="notes">You just can’t cover all of it in one article or in what’s left of my 30 minute
-					talk</aside>
-			</section>
-			<section>
-				<h1>What I think is most incredible is to see how technology has changed in that time.</h1>
-				<aside class="notes">Kids these days have it so easy!</aside>
-				<aside class="notes">Life goes pretty fast, if you don’t pay attention it will pass you by</aside>
-			</section>
-			<section>
-				<section>By the numbers</section>
+				<section>
+					<img class="stretch plain" src="images/hackaday-fifteenth-anniversary.jpg" />
+					<aside class="notes">
+						<ul>
+							<li>Hackaday is 15 Years Old</li>
+							<li>You just can’t cover all of it in one article or in what’s left of my 30 minute	talk</li>
+							<li>What I think is most incredible is to see how technology has changed in that time.</li>
+							<li>Kids these days have it so easy!</li>
+							<li></li>Life goes pretty fast, if you don’t pay attention it will pass you by</li>
+						</ul>
+					</aside>
+				</section>
 				<section># of articles per day</section>
 				<section># of authors by month</section>
 				<section>firsts</section>
+				<section>
+					<div>
+						<img class="imagefirst" src="images/oldhackaday-widrive-had-rccar-1.jpg" />
+						<img class="imagesecond" src="images/newhackaday-donkey_car.jpg" />
+					</div>
+				</section>
+				<section>
+						<div>
+							<img class="imagefirst" style="width:30%; margin-top:0;" src="images/oldhackaday-RepRapOneDarwin-darwin.jpg" />
+							
+							<video class="imagesecond" style="width:66%;" data-autoplay="true" loop="true">
+									<source src="images/newhackaday-jubilee.mp4" type="video/mp4"></video>
+						</div>
+						<div style="clear:both;">
+							<figcaption class="imagefirst" style="width:30%; font-size: 0.8em;">RepRap Darwin</figcaption>
+							<figcaption class="imagesecond" style="width:66%; font-size: 0.8em;">Jubilee by Joshua Vasquez</figcaption>
+						</div>
+				</section>
 			</section>
 			<section>
 				<section>
@@ -261,7 +280,7 @@
 						<ul>
 							<li>The superconference badge is microcosm of what I think is to come</li>
 							<li>FPGAs are the future -- they let you invent your own hardware!</li>
-						</u>
+						</ul>
 					</aside>
 				</section>
 				<section>
