Finished stats slides

--- a/index.html
+++ b/index.html
@@ -45,41 +45,42 @@
 					<img class="stretch" src="images/confused-about-hackaday.jpg" />
 				</section>
 				<section>
-						<div class="twoimage">
-							<img class="stretch imagefirst" src="images/ask-hackaday-smartwatch.jpg" />
-							<img class="stretch imagesecond" src="images/ask-hackaday-schematics.jpg" />
-						</div>
-						<aside class="notes">Comes up with the writers when we write “Ask Hackaday:” articles</aside>
+					<div class="twoimage">
+						<img class="stretch imagefirst" src="images/ask-hackaday-smartwatch.jpg" />
+						<img class="stretch imagesecond" src="images/ask-hackaday-schematics.jpg" />
+					</div>
+					<aside class="notes">Comes up with the writers when we write “Ask Hackaday:” articles</aside>
 				</section>
 				<section>
 					<img class="stretch plain" src="images/hackadayio-project-grid.jpg" />
-					<aside class="notes">We are all Hackaday -- it’s a global virtual hackerspace that changes as people move in and out
+					<aside class="notes">We are all Hackaday -- it’s a global virtual hackerspace that changes as people
+						move in and out
 						of the three rings of our circus with their projects and work</aside>
 				</section>
 				<section>
 					<h2>“Hackaday is the Common Link in the Collective Brain”</h2>
 					<div style="text-align: left; margin-left:60%;">
-							<p style="margin-bottom: 0;">–Elliot Williams</p>
-							<p style="font-size: 0.3em; margin-left:10em; margin-top:0;">Managing Editor, Hackaday</p>
-						</div>
-						<aside class="notes">Hardest thing is describing what Hackaday is all about</aside>
-					</section>
-					<section>
-						<img class="stretch plain" src="images/proxima-wrencher-hackaday_wide.png" />
-						<aside class="notes">
-							<h2>Supplyframe's support</h2>
-							<ul>
-								<li>safeguard Hackaday’s Editorial Independence</li>
-								<li>Making long-form original content possible</li>
-								<li>Hackaday.io</li>
-								<li>Hackaday Prize</li>
-								<li>Supercon and other live events</li>
-							</ul>
-						</aside>
-					</section>
+						<p style="margin-bottom: 0;">–Elliot Williams</p>
+						<p style="font-size: 0.3em; margin-left:10em; margin-top:0;">Managing Editor, Hackaday</p>
+					</div>
+					<aside class="notes">Hardest thing is describing what Hackaday is all about</aside>
 				</section>
 				<section>
-					<section>
+					<img class="stretch plain" src="images/proxima-wrencher-hackaday_wide.png" />
+					<aside class="notes">
+						<h2>Supplyframe's support</h2>
+						<ul>
+							<li>safeguard Hackaday’s Editorial Independence</li>
+							<li>Making long-form original content possible</li>
+							<li>Hackaday.io</li>
+							<li>Hackaday Prize</li>
+							<li>Supercon and other live events</li>
+						</ul>
+					</aside>
+				</section>
+			</section>
+			<section>
+				<section>
 					<h1>Great Things Happened in 2019</h1>
 				</section>
 				<section>
@@ -159,7 +160,7 @@
 					<img class="stretch" src="images/articles-debunking-brain-computer-interfaces.jpg" />
 				</section>
 				<section>
-						<img class="stretch" src="images/articles-yapo-lightbulbs.jpg" />
+					<img class="stretch" src="images/articles-yapo-lightbulbs.jpg" />
 				</section>
 				<section>
 					<img class="stretch" src="images/articles-yapo-oldcomponents.jpg" />
@@ -200,20 +201,229 @@
 			</section>
 			<section>
 				<section>
+					<h1>Fifteen Years</h1>
+					<h6>of fresh hacks every day</h6>
+				</section>
+				<section>
+					<h1>5,545 <span style="color:white;">Days</span></h1>
+					<h1>34,718 <span style="color:white;">Articles</span></h1>
+					<h1>918,271 <span style="color:white;">Comments</span></h1>
+				</section>
+				<section data-background="images/graph-articles-published-per-day.png">
+					<aside class="notes">Articles published per day</aside>
+				</section>
+				<section data-background="images/graph-average-daily-publishing-grouped-by-month.png">
+					<aside class="notes">Grouped by Month: Articles published per day</aside>
+				</section>
+				<section data-background="images/graph-average-daily-publishing-grouped-by-year.png">
+					<aside class="notes">Grouped by Year: Articles published per day</aside>
+				</section>
+				<section data-background="images/graph-total-days-for-each-publish-number.png">
+					<aside class="notes">Distinct daily counts</aside>
+				</section>
+				<section>
+					<h2>Solo Hack Percentage (SHP):</h2>
+					<div class="stretch">
+					<ul style="column-count: 2; column-width: 300px;">
+						<li><b>2004 <span style="color:#97d700">100%</span></b></li>
+						<li><b>2005 <span style="color:#97d700">46%</span></b></li>
+						<li><b>2006 <span style="color:#97d700">80%</span></b></li>
+						<li><b>2007 <span style="color:#97d700">84%</span></b></li>
+						<li><b>2008 <span style="color:#97d700">28%</span></b></li>
+						<li><b>2009 <span style="color:#97d700">4%</span></b></li>
+						<li><b>2010 <span style="color:#97d700">1%</span></b></li>
+						<li><b>2011 <span style="color:#97d700">0%</span></b></li>
+						<li><b>2012 <span style="color:#97d700">1%</span></b></li>
+						<li><b>2013 <span style="color:#97d700">0%</span></b></li>
+						<li><b>2014 <span style="color:#97d700">0%</span></b></li>
+						<li><b>2015 <span style="color:#97d700">0%</span></b></li>
+						<li><b>2016 <span style="color:#97d700">0%</span></b></li>
+						<li><b>2017 <span style="color:#97d700">0%</span></b></li>
+						<li><b>2018 <span style="color:#97d700">0%</span></b></li>
+						<li><b>2019 <span style="color:#97d700">0%</span></b></li>
+					</ul>
+				</div>
+				</section>
+				<section data-background="images/graph-average-monthly-authors.png">
+					<aside class="notes">Authors per month</aside>
+				</section>
+				<section>
+					<img class="plain" style="float:left; height: 1em; margin-left:120px;" src="images/wrencher-limegreen.png" />
+					<img class="plain" style="float:right; height: 1em; margin-right:120px;" src="images/wrencher-limegreen.png" />
+					<h2>Hackaday Authors</h2>
+					<ul style="list-style-type: none; column-count: 6; font-size:0.37em;">
+						<li><b>Juan Aguilar</b></li>
+						<li><b>Akiba</b></li>
+						<li><b>Charles Alexanian</b></li>
+						<li><b>Alasdair Allan</b></li>
+						<li><b>Chris Anderson</b></li>
+						<li><b>Anthony</b></li>
+						<li><b>Voja Antonic</b></li>
+						<li><b>Bob Baddeley</b></li>
+						<li><b>Richard Baguley</b></li>
+						<li><b>John Baichtal</b></li>
+						<li><b>Zach Banks</b></li>
+						<li><b>Edward Becker</b></li>
+						<li><b>Brian Benchoff</b></li>
+						<li><b>Jonathan Bennett</b></li>
+						<li><b>Daniel Bogdanoff</b></li>
+						<li><b>Brian Boucheron</b></li>
+						<li><b>Sean Boyce</b></li>
+						<li><b>Jasmine Brackett</b></li>
+						<li><b>Aleksandar Bradic</b></li>
+						<li><b>Rich Bremer</b></li>
+						<li><b>Jack Buffington</b></li>
+						<li><b>Phil Burgess</b></li>
+						<li><b>Nick Caiello</b></li>
+						<li><b>Strom Carlson</b></li>
+						<li><b>Joey Celis</b></li>
+						<li><b>Gregory L. Charvat</b></li>
+						<li><b>Roger Cheng</b></li>
+						<li><b>chriskiick</b></li>
+						<li><b>Michael Ciuffo</b></li>
+						<li><b>cnlohr</b></li>
+						<li><b>Bryan Cockfield</b></li>
+						<li><b>Gerrit Coetzee</b></li>
+						<li><b>Jesse Congdon</b></li>
+						<li><b>Nick Conn</b></li>
+						<li><b>Abe Connelly</b></li>
+						<li><b>Danie Conradie</b></li>
+						<li><b>Ground Control</b></li>
+						<li><b>Jeremy Cook</b></li>
+						<li><b>Cameron Coward</b></li>
+						<li><b>Kevin Dady</b></li>
+						<li><b>Kevin Darrah</b></li>
+						<li><b>Lewin Day</b></li>
+						<li><b>Ben Delarre</b></li>
+						<li><b>Ed Van Cise</b></li>
+						<li><b>Steven Dufresne</b></li>
+						<li><b>Noah Dunker</b></li>
+						<li><b>Quinn Dunki</b></li>
+						<li><b>Brandon Dunson</b></li>
+						<li><b>Barb Dybwad</b></li>
+						<li><b>Benjamin Eckel</b></li>
+						<li><b>Eliot</b></li>
+						<li><b>Tucker Ervin</b></li>
+						<li><b>Eric Evenchick</b></li>
+						<li><b>fabienneserriere</b></li>
+						<li><b>Adam Fabio</b></li>
+						<li><b>Theodora Fabio</b></li>
+						<li><b>Lauren Faris</b></li>
+						<li><b>Rachel Fee</b></li>
+						<li><b>Ryan Fitzpatrick</b></li>
+						<li><b>Matt Freund</b></li>
+						<li><b>Chris Gilmer</b></li>
+						<li><b>Keely Grand</b></li>
+						<li><b>Lara Grant</b></li>
+						<li><b>George Graves</b></li>
+						<li><b>Sven Gregori</b></li>
+						<li><b>Jakob Griffith</b></li>
+						<li><b>Hackaday</b></li>
+						<li><b>Brett Haddock</b></li>
+						<li><b>DJ Harrigan</b></li>
+						<li><b>Adam Harris</b></li>
+						<li><b>Todd Harrison</b></li>
+						<li><b>Rich Hawkes</b></li>
+						<li><b>Bil Herd</b></li>
+						<li><b>James Hobson</b></li>
+						<li><b>Ian</b></li>
+						<li><b>Greg R. Jacobs</b></li>
+						<li><b>Ben James</b></li>
+						<li><b>jimmierodgers</b></li>
+						<li><b>Jeff Katz</b></li>
+						<li><b>Denisa Kera</b></li>
+						<li><b>Jason Komp</b></li>
+						<li><b>Caleb Kraft</b></li>
+						<li><b>Sophi Kravitz</b></li>
+						<li><b>Jack Laidlaw</b></li>
+						<li><b>Kimberly Lau</b></li>
+						<li><b>Chad Lawson</b></li>
+						<li><b>Helen Leigh</b></li>
+						<li><b>Sharon Lin</b></li>
+						<li><b>Jenny List</b></li>
+						<li><b>Drew Littrell</b></li>
+						<li><b>loganwilliams</b></li>
+						<li><b>Patrick Lokken</b></li>
+						<li><b>Anool Mahidharia</b></li>
+						<li><b>Adil Malik</b></li>
+						<li><b>Dan Maloney</b></li>
+						<li><b>Martin Malý</b></li>
+						<li><b>Marsh</b></li>
+						<li><b>Brian McEvoy</b></li>
+						<li><b>Rud Merriam</b></li>
+						<li><b>David A. Mindell</b></li>
+						<li><b>Adam Munich</b></li>
+						<li><b>James Munns</b></li>
+						<li><b>Matthew Murphy</b></li>
+						<li><b>Jacob Nahin</b></li>
+						<li><b>Tom Nardi</b></li>
+						<li><b>Mike Nathan</b></li>
+						<li><b>Jamie Navarro</b></li>
+						<li><b>Chris Nefcy</b></li>
+						<li><b>Chris Nelson</b></li>
+						<li><b>Will O'Brien</b></li>
+						<li><b>Rick Osgood</b></li>
+						<li><b>Kristina Panos</b></li>
+						<li><b>Donald Papp</b></li>
+						<li><b>Sean Percival</b></li>
+						<li><b>Sarah Petkus</b></li>
+						<li><b>Erin Pinheiro</b></li>
+						<li><b>Maya Posch</b></li>
+						<li><b>Yair Reshef</b></li>
+						<li><b>Drew Risinger</b></li>
+						<li><b>Manuel Rodriguez-Achach</b></li>
+						<li><b>Peter Rojas</b></li>
+						<li><b>Jason Rollette</b></li>
+						<li><b>rossfairgrieve</b></li>
+						<li><b>Phillip Ryals</b></li>
+						<li><b>Kerry Scharfglass</b></li>
+						<li><b>Matt Schulz</b></li>
+						<li><b>Nick Schulze</b></li>
+						<li><b>Inderpreet Singh</b></li>
+						<li><b>Mikey Sklar</b></li>
+						<li><b>Richard Steele</b></li>
+						<li><b>Mathieu Stephan</b></li>
+						<li><b>Jason Striegel</b></li>
+						<li><b>Will Sweatman</b></li>
+						<li><b>Mike Szczys</b></li>
+						<li><b>Matt Terndrup</b></li>
+						<li><b>Joseph Thibodeau</b></li>
+						<li><b>Devlin Thyne</b></li>
+						<li><b>Phillip Torrone</b></li>
+						<li><b>Christian Trapp</b></li>
+						<li><b>Pedro Umbelino</b></li>
+						<li><b>Michael Uttmark</b></li>
+						<li><b>Joshua Vasquez</b></li>
+						<li><b>Vince Veneziani</b></li>
+						<li><b>Juha Vierinen</b></li>
+						<li><b>Jake W</b></li>
+						<li><b>Moritz Walter</b></li>
+						<li><b>Christopher Wang</b></li>
+						<li><b>Steve Watkins</b></li>
+						<li><b>Alex Weinberg</b></li>
+						<li><b>Pat Whetman</b></li>
+						<li><b>Nava Whiteford</b></li>
+						<li><b>Al Williams</b></li>
+						<li><b>Elliot Williams</b></li>
+						<li><b>Joshua Wright</b></li>
+						<li><b>Naomi Wu</b></li>
+						<li><b>Ted Yapo</b></li>
+						<li><b>Ethan Zonca</b></li>
+					</ul>
+				</section>
+				<section>
 					<img class="stretch plain" src="images/hackaday-fifteenth-anniversary.jpg" />
 					<aside class="notes">
 						<ul>
 							<li>Hackaday is 15 Years Old</li>
-							<li>You just can’t cover all of it in one article or in what’s left of my 30 minute	talk</li>
+							<li>You just can’t cover all of it in one article or in what’s left of my 30 minute talk
+							</li>
 							<li>What I think is most incredible is to see how technology has changed in that time.</li>
 							<li>Kids these days have it so easy!</li>
 							<li></li>Life goes pretty fast, if you don’t pay attention it will pass you by</li>
 						</ul>
 					</aside>
 				</section>
-				<section># of articles per day</section>
-				<section># of authors by month</section>
-				<section>firsts</section>
 				<section>
 					<div>
 						<img class="imagefirst" src="images/oldhackaday-widrive-had-rccar-1.jpg" />
@@ -221,16 +431,18 @@
 					</div>
 				</section>
 				<section>
-						<div>
-							<img class="imagefirst" style="width:30%; margin-top:0;" src="images/oldhackaday-RepRapOneDarwin-darwin.jpg" />
-							
-							<video class="imagesecond" style="width:66%;" data-autoplay="true" loop="true">
-									<source src="images/newhackaday-jubilee.mp4" type="video/mp4"></video>
-						</div>
-						<div style="clear:both;">
-							<figcaption class="imagefirst" style="width:30%; font-size: 0.8em;">RepRap Darwin</figcaption>
-							<figcaption class="imagesecond" style="width:66%; font-size: 0.8em;">Jubilee by Joshua Vasquez</figcaption>
-						</div>
+					<div>
+						<img class="imagefirst" style="width:30%; margin-top:0;"
+							src="images/oldhackaday-RepRapOneDarwin-darwin.jpg" />
+
+						<video class="imagesecond" style="width:66%;" data-autoplay="true" loop="true">
+							<source src="images/newhackaday-jubilee.mp4" type="video/mp4"></video>
+					</div>
+					<div style="clear:both;">
+						<figcaption class="imagefirst" style="width:30%; font-size: 0.8em;">RepRap Darwin</figcaption>
+						<figcaption class="imagesecond" style="width:66%; font-size: 0.8em;">Jubilee by Joshua Vasquez
+						</figcaption>
+					</div>
 				</section>
 			</section>
 			<section>
