Fleshed out then and now hardware slides

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-	<title>reveal.js</title>
+	<title>2019 State of the Hackaday</title>
 
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/reveal.css">
@@ -224,32 +224,34 @@
 				<section>
 					<h2>Solo Hack Percentage (SHP):</h2>
 					<div class="stretch">
-					<ul style="column-count: 2; column-width: 300px;">
-						<li><b>2004 <span style="color:#97d700">100%</span></b></li>
-						<li><b>2005 <span style="color:#97d700">46%</span></b></li>
-						<li><b>2006 <span style="color:#97d700">80%</span></b></li>
-						<li><b>2007 <span style="color:#97d700">84%</span></b></li>
-						<li><b>2008 <span style="color:#97d700">28%</span></b></li>
-						<li><b>2009 <span style="color:#97d700">4%</span></b></li>
-						<li><b>2010 <span style="color:#97d700">1%</span></b></li>
-						<li><b>2011 <span style="color:#97d700">0%</span></b></li>
-						<li><b>2012 <span style="color:#97d700">1%</span></b></li>
-						<li><b>2013 <span style="color:#97d700">0%</span></b></li>
-						<li><b>2014 <span style="color:#97d700">0%</span></b></li>
-						<li><b>2015 <span style="color:#97d700">0%</span></b></li>
-						<li><b>2016 <span style="color:#97d700">0%</span></b></li>
-						<li><b>2017 <span style="color:#97d700">0%</span></b></li>
-						<li><b>2018 <span style="color:#97d700">0%</span></b></li>
-						<li><b>2019 <span style="color:#97d700">0%</span></b></li>
-					</ul>
-				</div>
+						<ul style="column-count: 2; column-width: 300px;">
+							<li><b>2004 <span style="color:#97d700">100%</span></b></li>
+							<li><b>2005 <span style="color:#97d700">46%</span></b></li>
+							<li><b>2006 <span style="color:#97d700">80%</span></b></li>
+							<li><b>2007 <span style="color:#97d700">84%</span></b></li>
+							<li><b>2008 <span style="color:#97d700">28%</span></b></li>
+							<li><b>2009 <span style="color:#97d700">4%</span></b></li>
+							<li><b>2010 <span style="color:#97d700">1%</span></b></li>
+							<li><b>2011 <span style="color:#97d700">0%</span></b></li>
+							<li><b>2012 <span style="color:#97d700">1%</span></b></li>
+							<li><b>2013 <span style="color:#97d700">0%</span></b></li>
+							<li><b>2014 <span style="color:#97d700">0%</span></b></li>
+							<li><b>2015 <span style="color:#97d700">0%</span></b></li>
+							<li><b>2016 <span style="color:#97d700">0%</span></b></li>
+							<li><b>2017 <span style="color:#97d700">0%</span></b></li>
+							<li><b>2018 <span style="color:#97d700">0%</span></b></li>
+							<li><b>2019 <span style="color:#97d700">0%</span></b></li>
+						</ul>
+					</div>
 				</section>
 				<section data-background="images/graph-average-monthly-authors.png">
 					<aside class="notes">Authors per month</aside>
 				</section>
 				<section>
-					<img class="plain" style="float:left; height: 1em; margin-left:120px;" src="images/wrencher-limegreen.png" />
-					<img class="plain" style="float:right; height: 1em; margin-right:120px;" src="images/wrencher-limegreen.png" />
+					<img class="plain" style="float:left; height: 1em; margin-left:120px;"
+						src="images/wrencher-limegreen.png" />
+					<img class="plain" style="float:right; height: 1em; margin-right:120px;"
+						src="images/wrencher-limegreen.png" />
 					<h2>Hackaday Authors</h2>
 					<ul style="list-style-type: none; column-count: 6; font-size:0.37em;">
 						<li><b>Juan Aguilar</b></li>
@@ -425,10 +427,69 @@
 					</aside>
 				</section>
 				<section>
+					<h2>Adding WiFi</h2>
 					<div>
-						<img class="imagefirst" src="images/oldhackaday-widrive-had-rccar-1.jpg" />
-						<img class="imagesecond" src="images/newhackaday-donkey_car.jpg" />
+						<img class="imagefirst plain" style="width:45%;" src="images/oldhackaday-wrt54g-rc-car.jpg" />
+						<img class="imagesecond" style="width:51%; margin-top:0.6em;"
+							src="images/newhackaday-voice-controlled-tank.jpg" />
 					</div>
+					<div style="clear:both;">
+						<figcaption class="imagefirst" style="width:40%; font-size: 0.8em;">2008</figcaption>
+						<figcaption class="imagesecond" style="width:56%; font-size: 0.8em;">2019</figcaption>
+					</div>
+					<aside class="notes">
+						https://hackaday.com/2008/08/28/wifi-robot-a-hacked-wrt54gl-rover/
+						https://hackaday.com/2018/09/06/esp8266-powered-tank-with-voice-control/
+					</aside>
+				</section>
+				<section>
+					<h2>Taking it Cellular</h2>
+					<div style="width:70%; margin: 0 auto;">
+						<img class="imagefirst"	src="images/oldhackaday-cell-bot-nokia.jpg" />
+						<img class="imagesecond" src="images/newhackaday-cellular-modules.jpg" />
+					</div>
+					<div style="clear:both; width:70%; margin: 0 auto;">
+						<figcaption class="imagefirst" style="font-size: 0.8em;">2008</figcaption>
+						<figcaption class="imagesecond" style="font-size: 0.8em;">2019</figcaption>
+					</div>
+					<aside class="notes">
+						https://hackaday.com/2008/02/02/cellular-data-controlled-robot/
+						https://hackaday.com/2019/01/04/finding-the-goldilocks-cell-module/
+					</aside>
+				</section>
+				<section>
+					<h2>Putting Linux On It</h2>
+					<div>
+						<img class="imagefirst" style="width:55%;"
+							src="images/oldhackaday-gumstix-autonomous-vehicle.jpg" />
+						<img class="imagesecond" style="width:41%;" src="images/newhackaday-donkey_car.jpg" />
+					</div>
+					<div style="clear:both;">
+						<figcaption class="imagefirst" style="width:55%; font-size: 0.8em;">2006</figcaption>
+						<figcaption class="imagesecond" style="width:41%; font-size: 0.8em;">2017</figcaption>
+					</div>
+					<aside class="notes">
+						Gumstix $110
+						https://web.archive.org/web/20061114003007/http://www.pegasushabproject.org.uk/nomad/construction.html
+						Raspberry Pi 3
+						https://hackaday.com/2017/06/06/self-driving-rc-cars-with-tensorflow-raspberry-pi-or-macbook-onboard/
+					</aside>
+				</section>
+				<section>
+					<h2>Battery Power</h2>
+					<div>
+						<img class="imagefirst plain" style="width:40%;"
+							src="images/oldhackaday-lithium-battery-packs.jpg" />
+						<img class="imagesecond" style="width:56%;" src="images/newhackaday-batteries-drone.jpg" />
+					</div>
+					<div style="clear:both;">
+						<figcaption class="imagefirst" style="width:40%; font-size: 0.8em;">2008</figcaption>
+						<figcaption class="imagesecond" style="width:56%; font-size: 0.8em;">2019</figcaption>
+					</div>
+					<aside class="notes">
+						https://hackaday.com/2008/03/15/li-ion-for-your-roomba/
+						https://hackaday.com/2019/02/23/charging-lipos-with-usb-power-delivery/
+					</aside>
 				</section>
 				<section>
 					<div>
@@ -439,8 +500,8 @@
 							<source src="images/newhackaday-jubilee.mp4" type="video/mp4"></video>
 					</div>
 					<div style="clear:both;">
-						<figcaption class="imagefirst" style="width:30%; font-size: 0.8em;">RepRap Darwin</figcaption>
-						<figcaption class="imagesecond" style="width:66%; font-size: 0.8em;">Jubilee by Joshua Vasquez
+						<figcaption class="imagefirst" style="width:30%; font-size: 0.8em;">2014 RepRap Darwin</figcaption>
+						<figcaption class="imagesecond" style="width:66%; font-size: 0.8em;">2019 Jubilee by Joshua Vasquez
 						</figcaption>
 					</div>
 				</section>
@@ -459,12 +520,13 @@
 					<aside class="notes">Hardware is still hard but this helps a lot</aside>
 				</section>
 				<section>
+					<h4>Modules Within Modules Within Modules</h4>
 					<div>
-						<figure class="imagefirst">
+						<figure class="imagefirst" style="width:51%">
 							<img src="images/modules-avr-gps.jpg" />
 							<figcaption>2007</figcaption>
 						</figure>
-						<figure class="imagesecond">
+						<figure class="imagesecond" style="width:45%">
 							<img src="images/Modules-arduino-gps.jpg" />
 							<figcaption>2011</figcaption>
 						</figure>
