--- a/index.html
+++ b/index.html
@@ -514,12 +514,6 @@
 					<p>https://hackaday.io/project/100965</p>
 				</section>
 				<section>
-					<h2>Nexus Technologies</h2>
-					<img class="stretch" src="images/Nexus-Technologies.jpg" />
-					<p>https://hackaday.com/?p=385048</p>
-					<aside class="notes">Hardware is still hard but this helps a lot</aside>
-				</section>
-				<section>
 					<h4>Modules Within Modules Within Modules</h4>
 					<div>
 						<figure class="imagefirst" style="width:51%">
@@ -560,40 +554,38 @@
 				<section>
 					<img class="plain" src="images/lattice-ecp5-fpga.png" />
 				</section>
-			</section>
-			<section>
 				<section>
-					<h1>FPGAs are the future -- they let you invent your own hardware!</h1>
-					<aside class="notes">These are only now becoming a common appearance as the open toolsets make them
-						hacker friendly</aside>
+					<h2>Open Source Toolchains</h2>
+					<ul>
+						<li>yosys</li>
+						<li>nextpnr</li>
+						<li>Project IceStorm</li>
+						<li>Project Trellis</li>
+						<li>Project X-Ray</li>
+						<li>iverilog</li>
+						<li>verilator</li>
+					</ul>
 				</section>
 				<section>
-					<h1>RISC-V is super-desirable for companies that want to control their designs, meaning industry
-						adoption give enthusiast and engineer adoption a boost</h1>
-				</section>
-				<section>
-					<h1>Sprite_TM did the heavy lifting by far, but there’s a ton of team and community involvement in
-						everything from solving hard problems in the SOC, to making a pain-free toolchain install,
-						writing the games, designing the workshops, and documenting all of it.</h1>
-					<aside class="notes">This is truly distributed engineering and doing hard things for the fun of it.
-					</aside>
+					<img class="stretch" src="images/map-distributed-engineering.png">
 				</section>
 			</section>
 			<section>
 				<section>
-					<h1>We need an age of enlightenment</h1>
+					<img class="stretch" src="images/Library-scales.jpg" />
+					<aside class="notes">We need proliferate this age of enlightenment</aside>
 				</section>
 				<section>
-					<h1>Encourage Open</h1>
+					<h2 style="text-align:left;">Our Mandate</h2>
+					<ul>
+						<li>Encourage Open Wherever Possible</li>
+						<li>Normalize Learning and Trying New Things as Entertainment</li>
+						<li>Be Inclusive in the Sharing of Knowledge</li>
+					</ul>
 				</section>
 				<section>
-					<h1>Normalize learning and trying out new things as a entertainment</h1>
-				</section>
-				<section>
-					<h1>Be open and be inclusive</h1>
-				</section>
-				<section>
-					<h1>Long live Hackaday</h1>
+					<img class="stretch plain" src="images/proxima-wrencher-hackaday_wide.png" />
+					<aside class="notes">Long live Hackaday</aside>
 				</section>
 		</div>
 	</div>
