--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 					<aside class="notes">Distinct daily counts</aside>
 				</section>
 				<section>
-					<h2>Solo Hack Percentage (SHP):</h2>
+					<h2 style="margin-top:1em;">Solo Hack Percentage (SHP):</h2>
 					<div class="stretch">
 						<ul style="column-count: 2; column-width: 300px;">
 							<li><b>2004 <span style="color:#97d700">100%</span></b></li>
@@ -434,8 +434,8 @@
 							src="images/newhackaday-voice-controlled-tank.jpg" />
 					</div>
 					<div style="clear:both;">
-						<figcaption class="imagefirst" style="width:40%; font-size: 0.8em;">2008</figcaption>
-						<figcaption class="imagesecond" style="width:56%; font-size: 0.8em;">2019</figcaption>
+						<figcaption class="imagefirst" style="width:45%; font-size: 0.8em;">2008</figcaption>
+						<figcaption class="imagesecond" style="width:51%; font-size: 0.8em;">2019</figcaption>
 					</div>
 					<aside class="notes">
 						https://hackaday.com/2008/08/28/wifi-robot-a-hacked-wrt54gl-rover/
@@ -511,7 +511,7 @@
 					<h2>Living in the Future</h2>
 					<h6>import &lt;TimeOfFlight.hardware&gt;</h6>
 					<img class="stretch" src="images/modules-LIDAR.jpg" />
-					<p>https://hackaday.io/project/100965</p>
+					<p style="font-size: 0.8em;">https://hackaday.io/project/100965</p>
 				</section>
 				<section>
 					<h4>Modules Within Modules Within Modules</h4>
